# mtg-orchestrator

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  healthcheck.py  pyproject.toml  pytest.ini
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  instances.py  router.py
backend/app/bot/: handlers.py
backend/app/db/: crud.py  engine.py  models.py
backend/app/services/: docker_service.py  domain_validator.py  nginx_service.py  proxy_service.py
backend/app/static/: index.html
backend/app/templates/: nginx.conf.j2
backend/tests/: conftest.py
backend/tests/integration/: test_api_instances.py  test_auth_integration.py  test_rollback.py  test_spa_fallback.py  test_sse_create.py
backend/tests/unit/: test_auth.py  test_bot_handlers.py  test_db.py  test_domain_validator.py  test_nginx_service.py  test_secret.py  test_smoke_assumptions.py
frontend/: env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/composables/: useTheme.ts
frontend/src/lib/: api.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  proxy.ts  theme.ts
frontend/src/views/: BootScreen.vue  CreateProgress.vue  CreateProxy.vue  DecoyPage.vue  ProxyDetail.vue  ProxyList.vue  ReopenScreen.vue
infra/mtg/: default.config.toml  instance.config.toml.j2
infra/nginx/: nginx.conf  nginx.conf.template
scripts/: check_bundle_no_token.py  verify-infra.ps1  verify-infra.sh  verify-phase2.sh  verify-phase3.sh
